Fixed popup z-index

--- a/src/main/java/com/lorepo/icplayer/public/theme/player.css
+++ b/src/main/java/com/lorepo/icplayer/public/theme/player.css
@@ -514,10 +514,13 @@ hr, table, fieldset {
 /**
  * Stylizacja panelu popupa
  */
+ .ic_popup{
+ 	z-index: 100;
+ }
+ 
  .ic_popup_page{
  	width:	480px;
 	height:	320px;
-	z-index: 100;
  }
  
 .ic_popup .Caption {
